@@ -436,13 +436,6 @@
                 <para>Rule and device options:</para>
                 <variablelist>
                   <varlistentry>
-                    <term><option>ignore_remove</option></term>
-                    <listitem>
-                      <para>Do not remove the device node when the device goes away. This may be
-                      useful as a workaround for broken device drivers.</para>
-                    </listitem>
-                  </varlistentry>
-                  <varlistentry>
                     <term><option>link_priority=<replaceable>value</replaceable></option></term>
                     <listitem>
                       <para>Specify the priority of the created symlinks. Devices with higher
